--- a/.gitignore
+++ b/.gitignore
@@ -2,12 +2,13 @@
 __pycache__/
 *.py[codz]
 *$py.class
-.venv/
 
 # C extensions
 *.so
 
 # Distribution / packaging
+myvenv/
+.gradio/
 .Python
 build/
 develop-eggs/
